--- a/cjglobal_stock/views/stock_quant_views.xml
+++ b/cjglobal_stock/views/stock_quant_views.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Add the available to sell field to the admin view -->
     <record id="view_stock_quant_tree_editable_inherit_cjglobal" model="ir.ui.view">
         <field name="name">stock.quant.tree.editable.inherit.cjglobal</field>
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_tree_editable"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='reserved_quantity']" position="after">
+                <field name="available_to_sell" readonly="0"/>
+            </xpath>
+        </field>
+    </record>
+    <!-- Add the available to sell field to the user view -->
+    <record id="view_stock_quant_tree_inherit_cjglobal" model="ir.ui.view">
+        <field name="name">stock.quant.tree.inherit.cjglobal</field>
+        <field name="model">stock.quant</field>
+        <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='quantity']" position="after">
                 <field name="available_to_sell" readonly="0"/>
             </xpath>
         </field>
