--- a/cjg_purchase/views/purchase_order_views.xml
+++ b/cjg_purchase/views/purchase_order_views.xml
@@ -7,8 +7,8 @@
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page//field[@name='order_line']/tree//field[@name='name']" position="after">
-                    <field name='box_qty'/>
-                    <field name='price_box'/>
+                    <field name='unit_qty'/>
+                    <field name='unit_price'/>
                     <field name='case_pack'/>
                 </xpath>
             </field>
