--- a/cjglobal_stock/views/stock_quant_views.xml
+++ b/cjglobal_stock/views/stock_quant_views.xml
@@ -17,7 +17,7 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='available_quantity']" position="replace">
+            <xpath expr="//field[@name='available_quantity']" position="after">
                 <field name="available_to_sell" readonly="0"/>
             </xpath>
         </field>
